firmware/build/log/idf_py_stderr_output_85723
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/test_pulse_cmd.cpp: In function 'esp_err_t handle_move_test(const ParsedCommand*, char*, size_t)':
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/test_pulse_cmd.cpp:698:32: error: too many arguments to function 'esp_err_t format_error(char*, size_t, const char*, const char*)'
  698 |             return format_error(response, resp_len, ERR_INVALID_PARAMETER,
      |                    ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  699 |                 "D-axis freq must be %d-%d Hz", LIMIT_LEDC_MIN_FREQ_HZ, LIMIT_LEDC_MAX_FREQ_HZ);
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/test_pulse_cmd.cpp:40:
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/interface/command_parser/include/response_formatter.h:177:11: note: declared here
  177 | esp_err_t format_error(char* buf, size_t len, const char* code, const char* msg);
      |           ^~~~~~~~~~~~
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/test_pulse_cmd.cpp: At global scope:
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/test_pulse_cmd.cpp:198:13: warning: 'void cleanup_mcpwm_axis(int)' defined but not used [-Wunused-function]
  198 | static void cleanup_mcpwm_axis(int idx)
      |             ^~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/control/CMakeFiles/__idf_control.dir/command_executor/test_pulse_cmd.cpp.obj] Error 1
make[1]: *** [esp-idf/control/CMakeFiles/__idf_control.dir/all] Error 2
make: *** [all] Error 2
